--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -22,6 +22,7 @@
       <% end %>
     </header>  
     <% if full -%>
+      <section class="meta">
       <% unless account.books.empty? %>
         <div class="col">
           <h3 id="title-books">Books</h3>
@@ -38,6 +39,7 @@
           </ul>
         </div>
       <% end %>
+      </section>
     <% end -%>  
 </article>
 <% if full and account.services.any? -%>
