Style for services links

--- a/app/stylesheets/master.sass
+++ b/app/stylesheets/master.sass
@@ -88,6 +88,21 @@ dl
 
   &.services
 
+    a
+      text-decoration: none
+      span
+        text-decoration: underline
+
+      &:hover
+        span
+          text-decoration: none
+
+      img
+        vertical-align: top
+
+    ul li
+      margin-bottom: 8px
+
   dt
     color: #A3A099
     margin-bottom: 2px
