--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,4 +1,10 @@
-<h1>Ruby Committers</h1>
+<h1>
+  <a href="http://www.ruby-lang.org/" target="_blank">
+    <%= image_tag('ruby.png') %> Ruby
+  </a>
+  Committers
+</h1>
+
 <% @accounts.each_slice(3) do |account_slice| %>
   <table class="commiters">
     <tr class="commiters">
