--- a/app/views/accounts/_portrait.html.erb
+++ b/app/views/accounts/_portrait.html.erb
@@ -1,3 +1,3 @@
 <li class='image-wrapper'>
-  <%= image_tag portrait.url %>
+  <%= link_to image_tag(portrait.url), portrait.url, :rel => portrait.account.id %>
 </li>
