More compact services view

--- a/app/stylesheets/master.sass
+++ b/app/stylesheets/master.sass
@@ -99,23 +99,6 @@ dl
 
   &.sites
 
-  &.services
-
-    a
-      text-decoration: none
-      span
-        text-decoration: underline
-
-      &:hover
-        span
-          text-decoration: none
-
-      img
-        vertical-align: top
-        margin-right: 2px
-
-    ul li
-      margin-bottom: 8px
 
   dt
     color: #A3A099
@@ -127,6 +110,15 @@ dl
 
     li
       margin-bottom: 5px
+
+ul.services
+  margin-bottom: 15px
+  border-top: 1px dotted #FBD0DC
+  padding-top: 10px
+
+  li
+    float: left
+    margin-right: 8px
 
 .ruby-powered
   text-align: center
