--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,4 +1,6 @@
-<p><input id="filter_by_username" type="text" placeholder="Search by username"></p>
+<div id="filter">
+  <input id="filter_by_username" type="text" placeholder="Search by username">
+</div><!-- #filter -->
 <section id="accounts">
   <%= render :partial => 'account', :collection => @accounts %>
 </section>
