--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -139,14 +139,40 @@ a {
 p{
   margin:0 0 10px;
 }
-#filter_by_username{
-  padding:5px;
-  width:200px;
-  border:1px solid #333;
+#filter {
+  float: right;
+  margin-right: 10px;
+  margin-bottom: -10px;
+  padding: 10px 15px 20px;
+  background: white;
+  position: relative;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -moz-box-shadow: 10px 10px 5px #aba;
+  -webkit-box-shadow: 0px 0px 6px #aba;
+}
+#filter_by_username {
+  padding: 5px;
+  width: 200px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+}
+#filter_by_username:focus {
+  border-color: #0072bc;
 }
 
 #accounts{
+  clear: both;
 	overflow:hidden;
+	position: relative;
+	z-index: 2;
+	background: white;
+	padding: 20px;
+	border-radius: 4px;
+  -moz-border-radius: 4px;
+  -moz-box-shadow: 10px 10px 5px #aba;
+  -webkit-box-shadow: 0px 0px 6px #aba;
 }
 #accounts .account{
   width:290px;
@@ -299,6 +325,13 @@ p{
 }
 .my_services li:last-child a {
   margin:0;
+}
+.tooltip {
+  position: absolute;
+  left: -40px;
+  z-index: 50;
+  background: white;
+  padding: 3px 8px;
 }
 a.twitter{
   background:url(/images/twitter_32.png) no-repeat 0 0 #fff;
