--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -15,7 +15,7 @@
 
       <% unless account.names.empty? %>
         <h3>
-          Other accouts: <%= account.names.map(&:value).join(', ') %>
+          Other accounts: <%= account.names.map(&:value).join(', ') %>
         </h3>
       <% end %>
 
