--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -85,7 +85,7 @@ a {
   background-color: #a00;
   overflow: hidden;
   /* top left corner */
-  position: absolute;
+  position: fixed;
   left: -3em;
   top: 2.5em;
   /* 45 deg ccw rotation */
@@ -131,6 +131,7 @@ a {
 #logo a{
   color:#333;
   text-decoration:none;
+  text-shadow: 0 1px 1px white;
 }
 #logo a:hover{
   color:#999;
@@ -148,7 +149,7 @@ p{
   position: relative;
   border-radius: 4px;
   -moz-border-radius: 4px;
-  -moz-box-shadow: 10px 10px 5px #aba;
+  -moz-box-shadow: 0px 0px 6px #aba;
   -webkit-box-shadow: 0px 0px 6px #aba;
 }
 #filter_by_username {
@@ -171,7 +172,7 @@ p{
 	padding: 20px;
 	border-radius: 4px;
   -moz-border-radius: 4px;
-  -moz-box-shadow: 10px 10px 5px #aba;
+  -moz-box-shadow: 0px 0px 6px #aba;
   -webkit-box-shadow: 0px 0px 6px #aba;
 }
 #accounts .account{
@@ -221,7 +222,7 @@ p{
   padding-left: 110px;
   border-radius: 4px;
   -moz-border-radius: 4px;
-  -moz-box-shadow: 10px 10px 5px #aba;
+  -moz-box-shadow: 0px 0px 6px #aba;
   -webkit-box-shadow: 0px 0px 6px #aba;
   position:relative;
   z-index:200;
@@ -243,7 +244,7 @@ p{
   background: white;
   padding: 10px;
   left: -30px;
-  -moz-box-shadow: 10px 10px 5px #aba;
+  -moz-box-shadow: 0px 0px 6px #aba;
   -webkit-box-shadow: 0px 0px 6px #aba;
   max-width: 100px;
 }
@@ -289,7 +290,7 @@ p{
   padding: 1px;
 }
 
-#account .my_services {
+/*#account .my_services {
   position: absolute;
   right: -60px;
   background: white;
@@ -298,9 +299,27 @@ p{
   z-index: 1;
   border-radius: 4px;
   -moz-border-radius: 4px;
-  -moz-box-shadow: 10px 10px 5px #aba;
+  -moz-box-shadow: 0px 0px 6px #aba;
   -webkit-box-shadow: 0px 0px 6px #aba;
+}*/
+
+#account .my_services {
+  position: absolute;
+  right: -60px;
+  background: #ccc;
+  top: 20px;
+  z-index: 1;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
 }
+#account .my_services ul {
+  border: 1px solid #f7f7f7;  
+  padding: 15px;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-box-shadow:inset 0 0 5px #888; 
+}
+
 .my_services a {
   display:block;
   text-indent:-9999px;
