--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -3,4 +3,5 @@
 </div><!-- #filter -->
 <section id="accounts">
   <%= render :partial => 'account', :collection => @accounts %>
+  <div class="clear"></div>
 </section>
