More grid styling

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,6 +1,9 @@
 <div id="filter">
   <input id="filter_by_username" type="text" placeholder="Search by username">
 </div><!-- #filter -->
+<div id="stats">
+  There are <%= @accounts.count %> core contributers.
+</div><!-- #stats -->
 <section id="accounts">
   <%= render :partial => 'account', :collection => @accounts %>
   <div class="clear"></div>
