Nic doesn't know how to spell

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -2,7 +2,7 @@
   <input id="filter_by_username" type="text" placeholder="Search by username">
 </div><!-- #filter -->
 <div id="stats">
-  There are <%= @accounts.count %> core contributers.
+  There are <%= @accounts.count %> core contributors.
 </div><!-- #stats -->
 <section id="accounts">
   <%= render :partial => 'account', :collection => @accounts %>
