--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -88,7 +88,6 @@ a:hover {
 .image-wrapper img {
   width: 100%;
 }
-
 .ribbon {
   background-color: #a00;
   overflow: hidden;
@@ -199,6 +198,7 @@ p{
   font-family: "Museo-500", Museo, Helvetica, Arial, sans-serif;
 }
 #accounts .image-wrapper {
+  width: 100px;
   height: 100px;
 	overflow: hidden;
 }
