--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Ruby Committers</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag 'modernizr-1.6.min' %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
 </head>
