added account name as id for navigation

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,4 +1,4 @@
-<li class="profile">
+<li class="profile" id="<%= account.username %>">
   <section>
     <div class="portrait">
       <% unless account.portraits.empty? %>
