--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -168,7 +168,8 @@ p{
   padding: 5px;
   width: 200px;
   font-size: 16px;
-  border: 1px solid #ccc;
+  border: none;
+  border-bottom: 1px solid #ccc;
   border-radius: 2px;
 }
 #filter_by_username:focus {
@@ -345,7 +346,8 @@ p{
   padding: 15px;
   border-radius: 4px;
   -moz-border-radius: 4px;
-  -webkit-box-shadow:inset 0 0 5px #888; 
+  -webkit-box-shadow:inset 0 0 5px #888;
+  -moz-box-shadow:inset 0 0 5px #888; 
 }
 
 .my_services a {
