--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
+  <meta charset="utf-8">
+
   <title>Ruby Committers</title>
+
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
   <%= analytics_tag %>
 </head>
 <body>
+
+<header>
+  <h1>Ruby Committers</h1>
+  <h2>The people behind a programmer's best friend.</h2>
+</header>
 
 <%= yield %>
 
