--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -88,32 +88,6 @@ a:hover {
 .image-wrapper img {
   width: 100%;
 }
-.ribbon {
-  background-color: #a00;
-  overflow: hidden;
-  /* top left corner */
-  position: fixed;
-  left: -3em;
-  top: 2.5em;
-  /* 45 deg ccw rotation */
-  -moz-transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  /* shadow */
-  -moz-box-shadow: 0 0 1em #888;
-  -webkit-box-shadow: 0 0 1em #888;
-}
-.ribbon a {
-  border: 1px solid #faa;
-  color: #fff;
-  display: block;
-  font-weight: bold;
-  margin: 0.05em 0 0.075em 0;
-  padding: 0.5em 3.5em;
-  text-align: center;
-  text-decoration: none;
-  /* shadow */
-  text-shadow: 0 0 0.5em #444;
-}
 
 #container {
   clear: both;
@@ -155,25 +129,36 @@ p{
 #filter {
   float: right;
   margin-right: 10px;
-  margin-bottom: -10px;
-  padding: 10px 15px 20px;
-  background: white;
-  position: relative;
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-  -moz-box-shadow: 0px 0px 6px #aba;
-  -webkit-box-shadow: 0px 0px 6px #aba;
+  margin-bottom: -5px;
 }
 #filter_by_username {
-  padding: 5px;
+/*  padding: 5px;
   width: 200px;
   font-size: 16px;
   border: none;
+  color: #333;
   border-bottom: 1px solid #ccc;
   border-radius: 2px;
+  background: transparent;
+*/
+  width: 200px;
+  font-size: 16px;
+  background: #ddd;
+  border: 1px solid #f7f7f7;  
+  padding: 10px;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-box-shadow:inset 0 0 5px #888;
+  -moz-box-shadow:inset 0 0 5px #888;
+  
+  -webkit-transition: all 0.2s ease-in-out;
+ 	-moz-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	-webkit-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 }
 #filter_by_username:focus {
-  border-color: #0072bc;
+  background: white;
 }
 
 #accounts {
@@ -239,7 +224,7 @@ p{
 	padding:10px;
 }
 
-/* ACCOUNT
+/* =SINGLE ACCOUNT
 --------------------------*/
 #account {
   width:540px;
@@ -319,19 +304,6 @@ p{
   padding: 1px;
 }
 
-/*#account .my_services {
-  position: absolute;
-  right: -60px;
-  background: white;
-  padding: 15px;
-  top: 20px;
-  z-index: 1;
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-  -moz-box-shadow: 0px 0px 6px #aba;
-  -webkit-box-shadow: 0px 0px 6px #aba;
-}*/
-
 #account .my_services {
   position: absolute;
   right: -60px;
@@ -361,10 +333,10 @@ p{
   -moz-opacity: 0.7;
   filter:alpha(opacity=70);
   
-  -webkit-transition: all 0.3s ease-in-out;
- 	-moz-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	-webkit-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+ 	-moz-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	-webkit-transition: all 0.2s ease-in-out;
 	transition: all 0.2s ease-in-out;
 }
 .my_services a:hover {
