Display name instead of username and nickname, falling back to nickname and then username.

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -8,8 +8,9 @@
       <% end %>
     </div>
   </td>
-  <td><%= link_to account.username %></td>
-  <td><%= account.nicks.first.value if account.nicks.any? %></td>
+  <td>
+    <%= link_to name_for(account) %>
+  </td>
   <td>
     <% if site = account.sites.first %>
       <%= link_to site.title, site.url %>
