--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -6,8 +6,7 @@
   <thead>
     <tr>
       <th></th>
-      <th>Username</th>
-      <th>Nickname</th>
+      <th>Name</th>
       <th>Website</th>
       <th colspan="6">Services</th>
     </tr>
