--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,5 +18,11 @@
 
 <%= yield %>
 
+<footer>
+  <p><a href="http://github.com/tenderlove/rubycommitters.org"><img src="https://assets0.github.com/img/71eeaab9d563c2b3c590319b398dd35683265e85?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_right_gray_6d6d6d.png&path=" alt="Fork me on GitHub"></a></p>
+
+  <p>Created by <a href="http://tenderlovemaking.com/">Aaron Patterson</a>. Design by <a href="http://tristandunn.com">Tristan Dunn</a> for the <a href="http://tenderlovemaking.com/2011/01/04/rubycommitters-org-design-contest/">Ruby Committers Design Contest</a>.</p>
+</footer>
+
 </body>
 </html>
