Added results count to filter

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,4 +1,5 @@
 <div id="filter">
+  <span class="results"></span>
   <input id="filter_by_username" type="text" placeholder="Search by username">
 </div><!-- #filter -->
 <div id="stats">
