--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -131,16 +131,13 @@ p{
   margin-right: 10px;
   margin-bottom: -5px;
 }
+#filter .results {
+  padding-right: 10px;
+  text-shadow: 0 1px 1px #fff;
+  color: #444;
+  font-weight: bold;
+}
 #filter_by_username {
-/*  padding: 5px;
-  width: 200px;
-  font-size: 16px;
-  border: none;
-  color: #333;
-  border-bottom: 1px solid #ccc;
-  border-radius: 2px;
-  background: transparent;
-*/
   width: 200px;
   font-size: 16px;
   background: #ddd;
