A helper, really? Move name to Account and test it.

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -9,7 +9,7 @@
     </div>
   </td>
   <td>
-    <%= link_to name_for(account) %>
+    <%= link_to account.name, account %>
   </td>
   <td>
     <% if site = account.sites.first %>
