Correct CSS include and remove JS.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,7 @@
 
   <title>Ruby Committers</title>
 
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= stylesheet_link_tag 'site', :cache => false %>
   <%= analytics_tag %>
 </head>
 <body>
