--- a/public/stylesheets/scrollable.css
+++ b/public/stylesheets/scrollable.css
@@ -3,10 +3,10 @@ root element for the scrollable.
 when scrolling occurs this element stays still.
 */
 .scrollcontainer	{width: 100%;background: url(/images/scroll_bg.png);position:relative;height:641px;}
-.scrollcenter		{width: 1055px;margin: 0 auto;position: relative;}
+.scrollcenter		{width: 990px;margin: 0 auto;position: relative;}
 
 .scrollable{/* required settings */
-position:absolute;overflow:hidden;width:990px;height:580px;padding: 10px 0;border:none;left:40px;top:15px}
+position:absolute;overflow:hidden;width:990px;height:530px;padding: 10px 0;border:none;left:40px;top:15px}
 
 /*
 root element for scrollable items. Must be absolutely positioned
@@ -34,23 +34,16 @@ height:20000em;position:absolute;clear:both;}
 	margin:0;
 	cursor:pointer;
 	font-size:1px;
-	border:1px solid #fff;
 	position:absolute;
 }
 
 .scrollcontainer a.right,
-.scrollcontainer a.left {top:142px;}
+.scrollcontainer a.left {top:-30px;}
 
 /* right */
-.scrollcontainer a.right 				{ background-position: 0 -30px; right:0px;}
-.scrollcontainer a.right:hover 		{ background-position:-30px -30px; }
-.scrollcontainer a.right:active 	{ background-position:-60px -30px; } 
+.scrollcontainer a.right 				{ background: url(/images/button_next.png);width: 75px;height: 20px;right:-20px;}
+.scrollcontainer a.left				{ background: url(/images/button_next.png);width: 75px;height: 20px;left:45px;}
 
-
-/* left */
-.scrollcontainer a.left				{ margin-left: 0px; left:0;} 
-.scrollcontainer a.left:hover  		{ background-position:-30px 0; }
-.scrollcontainer a.left:active  	{ background-position:-60px 0; }
 
 
 /* disabled navigational button */
