--- a/public/stylesheets/typography.css
+++ b/public/stylesheets/typography.css
@@ -1,3 +1,4 @@
+/* @override http://localhost:3000/stylesheets/typography.css?1294243160 */
 /* --------------------------------------------------------------
 
    typography.css
@@ -37,9 +38,17 @@ h1,h2,h3,h4,h5,h6 { font-family: Helvetica, arial, sans-serif; color: #181818; f
 
 h1 { font-size: 3em; line-height: 1; margin: .2em 0 0.5em; }
 h2 { font-size: 1.8em; margin-bottom: 10px;}
-h3 { font-size: .9em; line-height: 1.25em; margin: 0 0 3px; text-transform: uppercase;font-weight:bold;}
+h3 { font-size: .8em; line-height: 1.25em; margin: 0 0 3px; text-transform: uppercase;font-weight:normal;}
 h4 { font-size: 1.4em; line-height: 1.25; margin: 0 0 6px; }
 h5 { font-size: 1em; margin: 0 0 6px; }
 h6 { font-size: 1em; }
 
 h1:first-child, h2:first-child { margin-top: 0; }
+
+/* Color ++ Fancy
+-------------------------------------------------------------- */
+.column.right h2 {color: #333;text-shadow:1px 1px #FFF;font-weight:bold;letter-spacing:-.1em;}
+.column.right h3 {color: #666;text-shadow:1px 1px #FFF}
+.meta, .meta a {color: #333;text-shadow:1px 1px #FFF;}
+.meta a {color: #ab0d00;text-decoration:none;}
+.meta a:hover {color: #ab0d00;text-decoration:underline;}
