--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -15,6 +15,7 @@ table {
 }
 
 header,
+section,
 footer {
   display: block;
 }
@@ -45,11 +46,15 @@ a:focus {
 }
 
 header {
+  background: url(/images/ruby.jpg) no-repeat;
+  width: 389px;
+  height: 100px;
   margin: 0 0 48px 0;
+  padding: 12px 0 0 128px;
 }
 
 header h1 {
-  font: bold 48px Arvo, serif;
+  font: bold 48px Arvo, "Helvetica Neue", Helvetica, Arial, Sans-serif;
   letter-spacing: -3px;
 }
 
@@ -57,7 +62,6 @@ header h2 {
   position: relative;
   top: -8px;
   left: 116px;
-  background: inherit;
   color: #666;
   font: normal 14px "Helvetica Neue", Helvetica, Arial, Sans-serif;
 }
